--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,6 +3,8 @@
 
 :root {
     --primary: #fe2c55;
+    --black: #000;
+    --text-color: #333;
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
 }
@@ -12,10 +14,22 @@
     padding: 0;
 }
 html {
-    font-size: 62, 5%;
+    font-size: 62.5%;
 }
 body {
     font-family: 'Montserrat', sans-serif;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
+    color: var(--text-color);
+}
+button,
+input,
+[tabindex] {
+    outline: none;
+    border: none;
+}
+
+a[href] {
+    color: var(--text-color);
+    text-decoration: none;
 }
