--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -4,9 +4,11 @@
 :root {
     --primary: #fe2c55;
     --black: #000;
+    --white: #fff;
     --text-color: #333;
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
+    --default-layout-hozizontal-spacer: 24px;
 }
 * {
     box-sizing: border-box;
