--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -3,15 +3,16 @@
     --search-height: 46px;
     --search-top-spacer: 9px;
     --search-button-width: 52px;
+    width: 100%;
     height: var(--default-layout-header-height, 60px);
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
-    width: 100%;
     display: flex;
     justify-content: center;
 }
 .inner {
     height: 100%;
-    width: var(--default-layout-width, 1150px);
+    width: var(--default-layout-width);
+    padding: 0 var(--default-layout-horizontal-spacer);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -22,14 +23,12 @@
 }
 .search {
     position: relative;
-    width: 361px;
     height: var(--search-height);
     padding-left: 16px;
     display: flex;
     background-color: rgba(22, 24, 35, 0.06);
     border-radius: var(--search-border-radius);
     border: 1.5px solid transparent;
-
     input {
         flex: 1;
         height: 100%;
@@ -38,11 +37,9 @@
         caret-color: var(--primary);
         background-color: transparent;
     }
-
     input:not(:placeholder-shown) ~ .search-btn {
         color: rgba(22, 24, 35, 0.75);
     }
-
     &::after {
         content: '';
         position: absolute;
@@ -52,12 +49,16 @@
         height: calc(var(--search-height) - var(--search-top-spacer) * 2);
         background-color: rgba(22, 24, 35, 0.12);
     }
-
     &:focus-within {
         border-color: rgba(22, 24, 35, 0.2);
     }
 }
-
+.search-title {
+    padding: 5px 12px;
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: rgba(22, 24, 35, 0.5);
+}
 .clear,
 .loading {
     position: absolute;
@@ -66,7 +67,6 @@
     transform: translateY(-50%);
     color: rgba(22, 24, 35, 0.34);
 }
-
 .search-btn {
     width: var(--search-button-width);
     height: 100%;
@@ -74,13 +74,19 @@
     border-bottom-right-radius: var(--search-border-radius);
     font-size: 1.8rem;
     color: rgba(22, 24, 35, 0.34);
-
     &:hover {
         cursor: pointer;
         background-color: rgba(22, 24, 35, 0.03);
     }
-
     &:active {
         background-color: rgba(22, 24, 35, 0.06);
     }
+}
+
+.more-btn {
+    font-size: 2rem;
+    margin-left: 28px;
+    padding: 4px 8px;
+    background-color: transparent;
+    cursor: pointer;
 }
